Change java compile version for workout to Java 8 and reconfigure maven project. Remove module-info.java for all modules.